# ethervoxai

./: .clang-format  .clang-tidy  .eslintrc.json  .gitignore  .markdown-link-check.json  .markdownlint-cli2.yaml  .markdownlint.json  AI-INTEGRATION-SUMMARY.md  AUDIO-TESTING.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MULTI-LANGUAGE-STRATEGY.md  Makefile  README.md  README_clean.md  REFACTORING-SUMMARY.md  SECURITY.md  add-license-headers.ps1  build.bat  build.sh  check-audio.bat  eslint.config.js  fix-markdown-format.ps1  fix-markdown-icons.ps1  install-alternatives.bat  install-audio-libraries.bat  install-remaining.bat  install-speaker-arm64.bat  jest.config.js  launch-demo.js  mvp.md  org-CODE_OF_CONDUCT.md  org-CONTRIBUTING.md  org-SECURITY.md  org-profile-README.md  package-lock.json  (+17 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  code-quality.yml  dashboard.yml  esp32-build.yml  release.yml  security.yml
cmake/: esp32-toolchain.cmake  rpi-toolchain.cmake  windows-toolchain.cmake
config/: audio.json  privacy.json
dashboard/: .auditci.json  .eslintrc.cjs  .safety-project.ini  README.md  index.html  lighthouserc.cjs  lighthouserc.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
dashboard/src/: App.vue  main.js
dashboard/src/assets/: main.css
dashboard/src/layouts/: DashboardLayout.vue
dashboard/src/router/: index.js
dashboard/src/stores/: system.js
dashboard/src/views/: Audio.vue  Languages.vue  Overview.vue  Plugins.vue  Privacy.vue  Settings.vue
docs/: AUDIO_ALTERNATIVES.md  INSTALLATION.md  README-RaspberryPi.md  README_WINDOWS_DEMO.md  VOICE_INTERACTION_DEMO.md  WINDOWS_DESKTOP_DEMO.md  cicd-pipeline.md  code-of-conduct.md  errorhandling.md  ethical-ai.md  legal.md  license-comparison.md  mvp.md  prd.md
docs/modules/: README.md  local-llm-stack.md  multilingual-runtime.md  privacy-dashboard.md
esp32-project/: CMakeLists.txt
esp32-project/docs/: hardware.md  quickstart.md
esp32-project/main/: CMakeLists.txt  main.c
examples/: CMakeLists.txt  llm_example.c  model_manager_example.c
examples/voice_assistant/: Makefile  README.md  main.c  voice_assistant
implementations/: README.md
implementations/cpp/esp32/: ELEGOO_EL_SM_012_README.md  README.md  build_elegoo.bat  partitions_elegoo.csv  partitions_ethervox.csv  platformio.ini  sdkconfig.elegoo-wroom32  sdkconfig.esp32c3
implementations/cpp/esp32/include/: config.h  elegoo_el_sm_012_config.h  esp32_platform_detector.h  inference_engine.h
implementations/cpp/include/: platform_detector.hpp
implementations/micropython/: README.md
implementations/micropython/ethervoxai/: __init__.py  platform_detector.py
implementations/nvidia-langchain/: README.md  requirements-nvidia.txt
implementations/nvidia-langchain/configs/: nvidia_stack.yaml
implementations/nvidia-langchain/docker/: Dockerfile.nvidia  docker-compose.nvidia.yml
implementations/nvidia-langchain/examples/: enterprise_chatbot.py  quickstart.py
implementations/python/: BUG_FIX_COMPLETE.md  README.md  requirements.txt  requirements_mvp.txt  setup.py
implementations/python/ethervoxai/: __init__.py  dialogue_engine.py  inference_engine.py  local_llm_stack.py  model_manager.py  platform_detector.py  voice_processor.py
implementations/python/examples/: README.md  advanced_real_model.py  basic_usage.py  complete_real_model.py  real_model_example.py  showcase_examples.py  simple_real_model.py
implementations/python/tests/: simple_test.py  test_ethervoxai.py  windows_safe_test.py
implementations/shared/tests/: cross-language-testing.md
include/ethervox/: audio.h  config.h  dialogue.h  error.h  llm.h  logging.h  model_manager.h  platform.h  plugins.h  stt.h  wake_word.h
scripts/: README.md  build.bat  build.sh  deploy-rpi.sh  download-windows-deps.sh  fix_build_errors.sh  setup-esp32-toolchain.sh  setup-rpi-toolchain.sh  setup-windows-toolchain.sh
scripts/demo/: launch-demo.js  raspberry-pi-audio-demo.js  run-demo.bat  run-voice-interaction-pi.sh  run-voice-interaction.bat  start-windows-demo.bat  test-llm.js  test-pipeline.js  test-real-ai.js  test-voice-ai-auto.js  test-voice-ai.js  voice-interaction-demo.js
scripts/setup/: install-alternatives.bat  install-audio-libraries.bat  install-remaining.bat  install-speaker-arm64.bat  setup-raspberry-pi-audio.sh
scripts/testing/: check-audio.bat  run-verify.bat  test-ai-integration.bat  test-alternatives.bat  test-audio-alternatives.js  test-audio-manager.js  test-audio-mgr.bat  test-build.js  verify-audio.js
sdk/: README.md  ethervox_sdk.c  ethervox_sdk.h
sdk/examples/: Makefile  README.md  device_profile_example.c  intent_plugin_example.c  model_router_example.c
specs/: ethervoxai-protocol.md
src/: demo.ts  index.ts  main.c  main.cpp  test-ai-integration.js
src/__tests__/: modules.test.ts
src/audio/: CMakeLists.txt  audio_core.c  platform_esp32.c  platform_linux.c  platform_macos.c  platform_rpi.c  platform_windows.c
src/common/: error.c  errors.ts  logging.c
src/demo/: windows-desktop.ts
src/dialogue/: CMakeLists.txt  dialogue_core.c
src/examples/ui/: README.md
src/llm/: README.md  llama_backend.c  llm_core.c  model_manager.c  tinyllama_backend.c
src/modules/: crossPlatformAudio.ts  enhancedWakeWordDetector.js  inferenceEngine.ts  localLLMStack.ts  modelManager.ts  multilingualRuntime.ts  platformDetector.ts  privacyDashboard.ts  raspberryPiAudio.ts
src/platform/: desktop_hal.c  esp32_hal.c  platform_core.c  rpi_hal.c
src/plugins/: CMakeLists.txt  plugin_manager.c
src/stt/: stt_core.c
src/wake_word/: wake_word_core.c
tests/: CMakeLists.txt  README.md  test_error.c
tests/audio-input-output/: AudioInputOutputTester.ts  AudioTestConsole.ts  README.md  launch-audio-test.js  run-audio-test.bat
tests/integration/: test_end_to_end.c
tests/unit/: test_audio_core.c  test_config.c  test_error.c  test_errors.ts  test_plugin_manager.c
(+46 files in other folders)
